angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: devendrayadav02/todo-angular-app:latest
        ports:
        - containerPort: 80
        # env:
        # - name: ANGULAR_APP_SPRING_BOOT_URL
        #   value: "spring-boot-app"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
