spring-boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: spring-boot
        image: devendrayadav02/todo-spring-boot-app:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "656Mi"
            cpu: "250m"
          limits:
            memory: "912Mi"
            cpu: "500m"
